# NEWROCARDIOMED

./: NEVROCARDIOMED_TAHLIL_HISOBOTI.docx  WINDOWS_SETUP.md  comboBoxItems.json
back/: .clang-format  CMakeLists.txt  db.txt  main.cpp
back/application/: index.cpp  index.h  security.cpp  security.h
back/config/storage/: index.cpp  index.h
back/controller/client/: index.cpp  index.h
back/controller/protocol/: index.cpp  index.h
back/controller/user/: index.cpp  index.h
back/domain/client/: index.cpp  index.h
back/domain/common/: index.h
back/domain/protocol/: index.cpp  index.h
back/domain/protocol_template/: index.cpp  index.h
back/domain/user/: index.cpp  index.h
back/infrastructure/storage/: index.cpp  index.h
back/repository/client/: index.cpp  index.h
back/repository/protocol/: index.cpp  index.h
back/repository/protocol_template/: index.cpp  index.h
back/repository/user/: index.cpp  index.h
back/usecase/client/: index.cpp  index.h
back/usecase/protocol/: index.cpp  index.h
back/usecase/protocol_template/: index.cpp  index.h
back/usecase/user/: index.cpp  index.h
front/: CMakeLists.txt  allpages.cpp  allpages.h  allpages.ui  cmake_install.cmake  main.cpp
front/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
front/.qt/rcc/: media.qrc
front/media/protocolforms/Cелезенка/: index.html
front/media/protocolforms/Mashonka/: exp.txt
front/media/protocolforms/Shitavitka/: index.html
front/media/protocolforms/Малый_таз_бланк/: exp.txt
front/media/protocolforms/Молочные_железы_бланк/: index.html
front/media/protocolforms/Первый_триместр/: index.html
front/media/protocolforms/Печеньбланк/: exp.txt
front/media/protocolforms/Плод_бланк/: index.html
front/media/protocolforms/Почкибланк/: exp.txt
front/media/protocolforms/Простата/: exp.txt  index.html
front/src/: utils.cpp  utils.h
front/src/calendar/: searchcalendardilalog.cpp  searchcalendardilalog.h  searchcalendardilalog.ui
front/src/clientform/: clientform.cpp  clientform.h  clientform.ui
front/src/clientparts/: clientparts.cpp  clientparts.h
front/src/protocolchose/: protocolchose.cpp  protocolchose.h  protocolchose.ui
front/src/protocolforms/: protocolforms.cpp  protocolforms.h
front/src/protocolparts/: protocolparts.cpp  protocolparts.h
front/src/templatebuilder/: templatebuilder.cpp  templatebuilder.h
migrations/: 002_protocol_templates.sql
web/: .gitignore  start_all.bat
web/backend/: .env  .gitignore  TEST_FILES_INDEX.md  TEST_REPORT.md  TEST_SUMMARY.txt  create_uset.http  debug.py  get_data.py  init.sql  requirements.txt  test_protocols.py  test_protocols_detailed.py
web/backend/app/: database.py  main.py
web/backend/app/core/: auth.py  config.py  security.py
web/backend/app/models/: client.py  protocol.py  template.py  user.py
web/backend/app/repositories/: client.py  protocol.py  template.py  user.py
web/backend/app/routers/: auth.py  clients.py  protocols.py  templates.py  users.py
web/backend/app/services/: client.py  docx_generator.py  protocol.py  template.py  user.py
web/frontend/: index.html  package-lock.json  package.json
web/frontend/public/templates/Kolenniy_sustav/: exp.txt  index.html
web/frontend/public/templates/Maliy_taz_blank/: index.html
web/frontend/public/templates/Mashonka/: index.html
web/frontend/public/templates/Molochnye_zhelezy_blank/: exp.txt
web/frontend/public/templates/Nadpochechniki/: exp.txt
web/frontend/public/templates/Perviy_trimestr/: exp.txt
web/frontend/public/templates/Plod_blank/: exp.txt
web/frontend/public/templates/Pochki_blank/: index.html
web/frontend/public/templates/Podzheludochnaya/: index.html
web/frontend/public/templates/Shitavitka/: exp.txt
web/frontend/src/: App.tsx  index.css
web/frontend/src/api/: auth.ts  clients.ts  protocols.ts  templates.ts
web/frontend/src/components/: ClientDetailModal.tsx  ClientForm.tsx  ClientList.tsx  NewClientModal.tsx  ProtocolFillForm.tsx  ProtocolFormFields.tsx  ProtocolFormModal.tsx  ProtocolList.tsx  ProtocolView.tsx  ProtocolViewModal.tsx  VoiceFormFiller.tsx  VoiceInput.tsx  VoiceTextArea.tsx
web/frontend/src/data/: protocolFields.ts  protocolForms.ts
web/frontend/src/pages/: ClientsPage.tsx  LoginPage.tsx
web/frontend/src/store/: auth.ts
web/frontend/src/types/: index.ts
web/frontend/src/utils/: fieldHistory.ts
web/protocoles/: ~$ленный сустав новый.docx  ~$лый таз новый.docx  Коленный сустав новый.docx  Малый таз новый.docx  Молочные железы новый.docx  Мочевой пузырь новый..docx  Надпочечники новый.docx  Первый ориместр новый.docx  Печень нов..docx  Плод новый.docx  Поджелудочная новый.docx  Почки нов..docx  Простата новый.docx  Селезёнка новый.docx  Сердцебиение.docx  Фолликулометрия.doc  Фолликулометрия.docx  Щитовидная железа..docx
